# air-hockey

./: '  .ccls  .clangd  .gitignore  CMakeLists.txt  README.md
assets/: puck.qoi  texture_atlas.qoi
shaders/: frag.glsl  vtx.glsl
src/: AirHockey.cpp  AirHockey.h  OpenGLFunctions.cpp  OpenGLFunctions.h  Paddle.cpp  Paddle.h  Puck.cpp  Puck.h  Renderer.cpp  Renderer.h  constants.h  lilphysics.h  main.cpp
tests/: hello_test.cc
