cmake_minimum_required(VERSION 3.12)
project(air-hockey)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(air_hockey src/main.cpp src/AirHockey.cpp src/Renderer.cpp src/OpenGLFunctions.cpp)
target_link_libraries(air_hockey GL SDL2 SDL2_image)
file(COPY shaders DESTINATION .)